feat: add newsList

--- a/src/pages/index/style.less
+++ b/src/pages/index/style.less
@@ -34,10 +34,12 @@
   bottom: 0;
   left: 0;
   right: 0;
+  padding: 0 28rpx;
+  font-size: 28rpx;
   // background: #3367D6;
 }
 .refresh {
-  position: absolute;
+  position: fixed;
   right: 30rpx;
   bottom: 50rpx;
   width: 66rpx;
