--- a/src/pages/index/style.less
+++ b/src/pages/index/style.less
@@ -1,6 +1,11 @@
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   display: flex;
-  background: #F4F5F6;
+  background-color: #F4F5F6;
+  z-index: 99999;
   .category-bar {
     flex:1;
     width: 92%;
